# VdiskBackup

./: .gitignore  CMakeLists.txt  CMakePresets.json  CopySettings.yaml  FileSystem.cpp  README.md  VolumeSystem.cpp  VolumeSystem.h  config.example.yaml  log.conf  vcpkg.json
VdiskBackup/: BackupConfigManager.cpp  BackupConfigManager.h  CMakeLists.txt  CopySettings.yaml  FileSystem.cpp  FileSystem.h  SetBoot.bat  VdiskBackup.cpp  VdiskBackup.h  VdiskBackupConfig.example.yaml  VdiskBackupManager.cpp  VdiskBackupManager.h  VdiskBackupResult.example.yaml  VirtDiskSystem.cpp  VirtDiskSystem.h  VolumeSystem.cpp  VolumeSystem.h  config.example.yaml  indicators.h  main.cpp  thread_pool.cpp  utils.cpp  utils.h
VdiskBackup/backend/: CMakeLists.txt
VdiskBackup/backend/include/: BackupConfigManager.h  BackupConfigTui.h  VdiskBackupManager.h
VdiskBackup/backend/src/: BackupConfigManager.cpp  BackupConfigTui.cpp  VdiskBackupManager.cpp  backend_main.cpp
VdiskBackup/common/: CMakeLists.txt
VdiskBackup/common/include/: BackupConfigManager.h  FileSystem.h  VirtDiskSystem.h  VolumeSystem.h  ftxFileSelector.h  thread_pool.h
VdiskBackup/common/src/: BackupConfigManager.cpp  FileSystem.cpp  VirtDiskSystem.cpp  VolumeSystem.cpp  ftxFileSelector.cpp  thread_pool.cpp  utils.cpp
VdiskBackup/common_util/: filepath.cpp  strutil.cpp
VdiskBackup/common_util/inner/: time_util_unix.cpp
VdiskBackup/frontend/: CMakeLists.txt  frontend.qrc  frontend_en_US.ts  frontend_zh_CN.ts
VdiskBackup/frontend/include/: Log.h  SettingsHelper.h  TranslateHelper.h
VdiskBackup/frontend/qml/: App.qml
VdiskBackup/frontend/qml/window/: MainWindow.qml
VdiskBackup/frontend/src/: Log.cpp  SettingsHelper.cpp  TranslateHelper.cpp  main.cpp
VdiskBackup/indicators/include/indicators/: cursor_control.hpp  termcolor.hpp
VdiskBackup/indicators/lib/pkgconfig/: indicators.pc
VdiskBackup/log4cplus/lib/cmake/log4cplus/: log4cplusConfig.cmake  log4cplusTargets-release.cmake  log4cplusTargets.cmake
VdiskBackup/log4cplus/lib/pkgconfig/: log4cplus.pc
VdiskBackup/spdlog/lib/pkgconfig/: spdlog.pc
common_util/: CMakeLists.txt  datetime.cpp
common_util/inner/: filesystem.h  filesystem_unix.cpp  filesystem_win.cpp  time_util_win.cpp
indicators/include/indicators/: cursor_movement.hpp  terminal_size.hpp
indicators/lib/cmake/indicators/: indicatorsConfig.cmake  indicatorsTargets.cmake
log4cplus/include/log4cplus/config/: windowsh-inc.h
log4cplus/lib/cmake/log4cplus/: log4cplusTargets-debug.cmake  log4cplusTargets.cmake
log4cplus/lib/pkgconfig/: log4cplus.pc
